--- a/source/less/blocks/about.less
+++ b/source/less/blocks/about.less
@@ -43,27 +43,27 @@
   background-position: 0 0;
 
   &--icon-1 {
-    background-image: url("/img/icons/icon-1.svg");
+    background-image: url("/img/icon-1.svg");
   }
 
   &--icon-2 {
-    background-image: url("/img/icons/icon-2.svg");
+    background-image: url("/img/icon-2.svg");
   }
 
   &--icon-3 {
-    background-image: url("/img/icons/icon-3.svg");
+    background-image: url("/img/icon-3.svg");
   }
 
   &--icon-4 {
-    background-image: url("/img/icons/icon-4.svg");
+    background-image: url("/img/icon-4.svg");
   }
 
   &--icon-5 {
-    background-image: url("/img/icons/icon-5.svg");
+    background-image: url("/img/icon-5.svg");
   }
 
   &--icon-6 {
-    background-image: url("/img/icons/icon-6.svg");
+    background-image: url("/img/icon-6.svg");
   }
 
   @media (min-width: @tablet-width) {
