--- a/source/less/blocks/fast-links.less
+++ b/source/less/blocks/fast-links.less
@@ -49,7 +49,7 @@
       right: 36px;
       width: 40px;
       height: 62px;
-      background-image: url("/img/icons/interior.svg");
+      background-image: url("/img/interior.svg");
     }
   }
 
@@ -60,7 +60,7 @@
       right: 27px;
       width: 60px;
       height: 60px;
-      background-image: url("/img/icons/toy.svg");
+      background-image: url("/img/toy.svg");
     }
   }
 
