--- a/source/less/blocks/inner-page.less
+++ b/source/less/blocks/inner-page.less
@@ -5,12 +5,16 @@
 
   @media (min-width: @tablet-width) {
     padding-top: 100px;
-    padding-bottom: 75px;
+    padding-bottom: 87px;
+    background-image: url("/img/backgrounds/zigzag-fill-tablet.png");
+    background-repeat: repeat-x;
+    background-position: 0 100%;
   }
 
   @media (min-width: @desktop-width) {
     padding-top: 102px;
-    padding-bottom: 96px;
+    padding-bottom: 112px;
+    background-image: url("/img/backgrounds/zigzag-fill-desktop.png");
   }
 }
 
