--- a/source/less/blocks/production-process.less
+++ b/source/less/blocks/production-process.less
@@ -31,7 +31,7 @@
   font-size: 17px;
   line-height: 24px;
   padding-left: 57px;
-  background-image: url("/img/icons/video.svg");
+  background-image: url("/img/video.svg");
   background-repeat: no-repeat;
   background-size: 32px, 22px;
   background-position: 0 50%;
@@ -129,7 +129,7 @@
   font-size: 0;
   line-height: 0;
   background: none;
-  background-image: url("/img/icons/play.svg");
+  background-image: url("/img/play.svg");
   background-repeat: no-repeat;
   background-position: 0 0;
   background-size: 100%;
