--- a/source/less/blocks/reviews.less
+++ b/source/less/blocks/reviews.less
@@ -9,12 +9,12 @@
     min-height: 457px;
     padding-top: 79px;
     padding-bottom: 47px;
-    background-image: url("/img/user/review-2.jpg");
+    background-image: url("/img/review-2.jpg");
     background-repeat: no-repeat;
     background-position: 0 0;
 
     @media (min-resolution: 2dppx) {
-      background-image: url("/img/user/review-2@2x.png");
+      background-image: url("/img/review-2@2x.png");
       background-size: 350px auto;
     }
   }
@@ -137,12 +137,12 @@
   background-position: 50% 50%;
 
   &--prev {
-    background-image: url("/img/icons/huge-arrow-left.svg");
+    background-image: url("/img/huge-arrow-left.svg");
     border-right: 1px solid @lines-grey;
   }
 
   &--next {
-    background-image: url("/img/icons/huge-arrow-left.svg");
+    background-image: url("/img/huge-arrow-left.svg");
     transform: rotate(180deg);
   }
 
