--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -18,7 +18,7 @@
     font-size: 43px;
     line-height: 81px;
     vertical-align: middle;
-    background-image: url("/img/icons/flag.svg");
+    background-image: url("/img/flag.svg");
     background-repeat: no-repeat;
     background-position: 100% -8px;
   }
@@ -89,7 +89,15 @@
   font: inherit;
   color: inherit;
   text-decoration-color: @green-underline;
-  text-underline-offset: 5px;
+  text-underline-offset: 6px;
+
+  @media (min-width: @tablet-width) {
+    text-underline-offset: 9px;
+  }
+
+  @media (min-width: @desktop-width) {
+    text-underline-offset: 13px;
+  }
 }
 
 .contacts__email-link:hover {
@@ -143,7 +151,15 @@
 .map__pin {
   position: absolute;
   left: 45%;
+  width: 67px;
+  height: 100px;
   margin-top: 141px;
+  padding: 0;
+  background-color: transparent;
+  background-image: url("/img/map-pin.svg");
+  background-repeat: no-repeat;
+  background-position: 0 0;
+  border: none;
 
   @media (min-width: @tablet-width) {
     left: 46%;
