--- a/source/less/blocks/modal-order.less
+++ b/source/less/blocks/modal-order.less
@@ -1,10 +1,18 @@
 .modal-order {
   position: fixed;
+  z-index: 100;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   background-color: fade(@base-white, 90%);
+}
+
+@keyframes bounce {
+  0% {transform: translateY(-2000px);}
+  70% {transform: translateY(30px);}
+  90% {transform: translateY(-10px);}
+  100% {transform: translateY(0);}
 }
 
 .modal-order__wrapper {
@@ -33,6 +41,11 @@
     & br {
       display: none;
     }
+  }
+
+  &--show {
+    animation-name: bounce;
+    animation-duration: 0.6s;
   }
 }
 
