--- a/source/less/blocks/form-group.less
+++ b/source/less/blocks/form-group.less
@@ -201,32 +201,19 @@
 
 .form-group__icon {
   position: absolute;
-  top: 0;
+  top: 10px;
   right: 0;
   width: 38px;
-  height: 100%;
+  height: auto;
   line-height: inherit;
-  text-align: center;
-  vertical-align: middle;
+  fill: @base-black;
+  opacity: 0.2;
+}
 
-  @media (min-width: @tablet-width) {
-    width: 76px;
-  }
-
-  @media (min-width: @desktop-width) {
-    width: 40px;
-  }
-
-  & svg {
-    fill: @base-black;
-    opacity: 0.2;
-  }
-
-  .form-group__text-field--contacts:hover + & svg,
-  .form-group__text-field--contacts:focus + & svg {
-    fill: @green-underline;
-    opacity: 1;
-  }
+.form-group__text-field--contacts:hover + svg,
+.form-group__text-field--contacts:focus + svg {
+  fill: @green-underline;
+  opacity: 1;
 }
 
 .form-group__label {
