--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -90,10 +90,21 @@
 }
 
 @keyframes moveFromTop {
-  0% {transform: translateY(0);}
-  70% {transform: translateY(30px);}
-  90% {transform: translateY(-10px);}
-  100% {transform: translateY(0);}
+  0% {
+    transform: translateY(0);
+  }
+
+  70% {
+    transform: translateY(30px);
+  }
+
+  90% {
+    transform: translateY(-10px);
+  }
+
+  100% {
+    transform: translateY(0);
+  }
 }
 
 .page-header__menu {
